# online_shop_backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  schema.yml  secretkey.py  start.sh
.nginx/: default.conf
services/payments/config/: urls.py
services/store_management/: manage.py
services/store_management/config/: asgi.py
services/store_management/config/settings/: auth.py
services/users/config/: database.py
src/: secretkey.py
src/payments/: settings.py  urls.py
src/payments/config/: database.py
src/payments/config/settings/: base.py
src/store_management/: asgi.py  manage.py  run_server.py  settings.py  urls.py  wsgi.py
src/store_management/apps/categories/: admin.py  models.py  tests.py  views.py
src/store_management/apps/orders/: services.py
src/store_management/apps/payment/: services.py
src/store_management/apps/products/: admin.py  models.py  tests.py  views.py
src/store_management/apps/stock/: views.py
src/store_management/apps/users/: admin.py  managers.py  models.py  serializers.py  services.py  signals.py  tests.py  token.py  urls.py  views.py
src/store_management/config/: database.py  urls.py
src/store_management/config/settings/: __init__.py  base.py  celery.py  database.py  drf.py
src/store_management/products_management/: apps.py  models.py  serializers.py  services.py  urls.py  views.py
src/users/: settings.py
src/users/common_users/: models.py
src/users/config/: database.py  wsgi.py
(+13 files in other folders)
