[tool.poetry]
name = "online-shop"
version = "0.1.0"
description = ""
authors = ["lilvolcanointhenighttime <eliotalderson031@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
djangorestframework = "^3.14.0"
python-dotenv = "^1.0.0"
pillow = "^10.2.0"
psycopg = "^3.1.16"
psycopg2 = "^2.9.9"
django-mptt = "^0.16.0"
requests = "^2.31.0"
reportlab = "^4.0.9"
paypalrestsdk = "^1.13.3"
celery = "^5.3.6"
redis = "^5.0.1"


[build-system]
build-backend = "poetry.core.masonry.api"

